--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-      &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">Github</a>.
+&copy; {{ site.time | date: '%Y' }} {{ site.author }}. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://pixyll.com/">Pixyll Theme</a>.
     </small>
   </div>
 </footer>
+
