neural networks post draft

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-&copy; {{ site.time | date: '%Y' }} {{ site.author }}. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://pixyll.com/">Pixyll Theme</a>.
+&copy; {{ site.time | date: '%Y' }} {{ site.author }}. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://pixyll.com/">Pixyll Theme</a>. Hosted by <a href="https://github.com/">GitHub</a>.
     </small>
   </div>
 </footer>
