--- a/css/pixyll.scss
+++ b/css/pixyll.scss
@@ -33,3 +33,34 @@
 @import 'gists';
 @import 'measure';
 @import 'pagination';
+
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+}
+
+.scaled-down-50-image
+{
+    width: 50%;
+    height: auto;
+}
+
+.scaled-down-70-image
+{
+    width: 70%;
+    height: auto;
+}
+
+.scaled-down-45-image
+{
+    width: 45%;
+    height: auto;
+}
+
+.scaled-down-40-image
+{
+    width: 40%;
+    height: auto;
+}
+
